[gd_scene load_steps=7 format=2]

[ext_resource path="res://stage/Stage.gd" type="Script" id=1]
[ext_resource path="res://effects/stars/Stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/SpawnerEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://powerups/SpawnPoweUps.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/GameHUD.tscn" type="PackedScene" id=6]

[node name="Stage" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Stars" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 361.37, 947.596 )

[node name="SpawnerEnemy" parent="." instance=ExtResource( 4 )]

[node name="SpawnPoweUps" parent="." instance=ExtResource( 5 )]

[node name="GameHUD" parent="." instance=ExtResource( 6 )]
[connection signal="heart_changed" from="Player" to="GameHUD" method="_on_Player_heart_changed"]
[connection signal="tree_exited" from="Player" to="." method="_on_Player_tree_exited"]
[connection signal="pressed" from="GameHUD/Control/MenuButton" to="." method="_on_MenuButton_pressed"]

[editable path="GameHUD"]
